<resources>
    <string name="section_map">Map</string>
    <string name="section_rules">Rules</string>
    <string name="section_twitter">Twitter</string>
    <string name="section_about">About</string>
    <string name="section_chat">Chat</string>
    <string name="section_settings">Settings</string>
    <string name="observer_mode">Observer mode</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="nav_observer_mode_text">Enable this if you don\'t take part yourself, but still want to follow the mass.</string>
    <string name="close">Really close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">Nope</string>
    <string name="close_button">Close</string>
    <string name="feedback">Feedback</string>
    <string name="datenschutz">Privacy policy</string>
    <string name="take_picture">Take picture</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="map_searching_for_location">Waiting for GPS signal</string>
    <string name="map_no_internet_connection_title">No internet connection</string>
    <string name="map_no_internet_connection_text">Without an internet connection you won\'t be able
        to see other users, share your location or write or read chat messages. Basically the app is
        pretty much useless like this :(\nPlease check your settings and enable mobile data.</string>
    <string name="map_no_gps_title">No GPS available</string>
    <string name="map_no_gps_text">This device has neither GPS or network location capabilities.
        Other users won\'t be able to see your location, but you can still follow the Mass.</string>
    <string name="map_gps_disabled_title">GPS is disabled</string>
    <string name="map_gps_disabled_text">Currently GPS and network location on your device are
        disabled. This means other users won\'t be able to see your location. You can still follow
        the Mass, but remember that the app depends on as many people as possible sharing their
        location.\nSo please consider enabling location services in your device settings.</string>
    <string name="map_gps_permissions_permanently_denied_title">Location access is denied</string>
    <string name="map_gps_permissions_permanently_denied_text">You previously denied permission to access your location and show notifications. Without location access you and other users won\'t be able to see your location on the map. Notifications are required to inform you that the app is still running in the background. You can still follow the Mass, but remember that the app depends on as many people as possible sharing their location.\nDo you want to grant the permission now in the app settings?</string>
    <string name="map_location_permissions_rationale_text">Location and notification access is crucial for the app to work. It is required to view your location on the map, share you location with other users, write chat messages and upload images. Notifications are required to inform you that the app is still running in the background. Without it you can still follow the Mass, but remember that the app depends on as many people as possible sharing their location.\nDo you want to grant the permission now?</string>
    <string name="map_oberserver_mode_info_heading">Observer mode is active</string>
    <string name="map_observer_mode_info_text">Already joined the mass?\nNice! Please disable observer mode now to help others see where you\'re going!</string>
    <string name="notification_tracking_title">Critical Maps Tracking</string>
    <string name="notification_tracking_text">The App runs in the background and sends your location data. Please close the App when you don\'t want to be tracked anymore.</string>
    <string name="notification_channel_name">Tracking notification</string>
    <string name="notification_channel_description_max300chars">It is not recommended to disable the notification since you might inadvertently keep tracking turned on.</string>
    <string name="notification_tracking_close">Close</string>
    <string name="notification_tracking_open">Open</string>
    <string name="rules_corken">Corking!?</string>
    <string name="rules_corken_explain">Protect motorists from themselves by corking!</string>
    <string name="rules_oncoming_traffic">Oncoming traffic</string>
    <string name="rules_oncoming_traffic_explain">Do not drive on the opposite lane.</string>
    <string name="rules_steady">Hold your horses!</string>
    <string name="rules_steady_explain">When driving in the front: No speeding! When driving in the rear: Close gaps!</string>
    <string name="rules_brake">No hard stops!</string>
    <string name="rules_brake_explain">If you really have to though, try to warn people behind you.</string>
    <string name="rules_green">When driving at the head: Stop at the redlights!</string>
    <string name="rules_green_explain">When you arrive at a red light while driving as part of the head of the mass, be sure to stop when the traffic light shows red.</string>
    <string name="rules_friendly">Hang loose</string>
    <string name="rules_friendly_explain">Don\'t allow yourself to be provoked. Be friendly to the police, motorists and everybody else, even if they are not.</string>
    <string name="rules_fun">Have fun!</string>
    <string name="rules_fun_explain">Enjoy reclaimed streets. Go checkout the Sound Bikes. Chat with motorists, pedestrian and let them know what\'s going on. Most importantly: Have fun!</string>
    <string name="rules_image_source">Images by criticalmass-hh.de (CC BY-NC-ND 3.0 DE)</string>
    <string name="twitter_heading">All Tweets containing \"CriticalMaps\"</string>
    <string name="twitter_try_again">Try again!</string>
    <string name="chat_heading">Messages will be deleted after 30 minutes.</string>
    <string name="chat_send">Send</string>
    <string name="chat_text">Your message &#8230;</string>
    <string name="chat_sending">Sending &#8230;</string>
    <string name="chat_no_data_connection_hint">No internet connection &#8230;</string>
    <string name="about_heading_social">social stuff</string>
    <string name="about_heading_website">website</string>
    <string name="about_heading_contributions">contributions</string>
    <string name="about_heading_code">code</string>
    <string name="about_heading_opensource">open source licenses</string>
    <string name="about_text_opensource">We are using the following open source libraries. Huge thanks to everyone involved in these projects!</string>
    <string name="about_license_website">website</string>
    <string name="about_license_more">more</string>
    <string name="about_license_less">less</string>
    <string name="settings_storage_header">Storage settings</string>
    <string name="settings_cache_subheading">Map cache</string>
    <string name="settings_cache_clear">Clear</string>
    <string name="settings_cache_used_mb">Used: %s</string>
    <string name="settings_cache_cache_mb">Cache: %s</string>
    <string name="settings_cache_free_mb">Free: %s</string>
    <string name="settings_cache_currently_used">Currently using %s</string>
    <string name="settings_choose_storage_subheading">Choose storage location</string>
    <string name="settings_choose_storage_mb_free"> (%s free)</string>
    <string name="settings_choose_storage_choose_title">Storage location</string>
    <string name="settings_choose_storage_confirm_title">Current cache will be cleared</string>
    <string name="settings_choose_storage_confirm_message">Changing the storage location will clear the current cache. Map tiles will have to be downloaded again when viewed.</string>
    <string name="settings_screen_header">Screen settings</string>
    <string name="settings_show_on_lockscreen_subheading">Show on Lockscreen</string>
    <string name="settings_show_on_lockscreen_summary">Keep the app in the foreground even when locking the phone</string>
    <string name="settings_keep_screen_on_subheading">Keep screen on</string>
    <string name="settings_keep_screen_on_summary">Prevent the display from turning off automatically while the app is open</string>
    <string name="settings_map_header">Map settings</string>
    <string name="settings_map_rotation_subheading">Rotation</string>
    <string name="settings_map_rotation_summary">Allow the map to be rotated</string>
    <string name="settings_show_gpx_subheading">Show GPX-file</string>
    <string name="settings_show_gpx_summary">Show GPX-file on the map</string>
    <string name="settings_choose_gpx_subheading">Choose GPX-file</string>
    <string name="settings_gpx_file_default">None</string>
    <string name="settings_high_res_tiles_subheading">High quality</string>
    <string name="settings_high_res_tiles_summary">Looks way better but also uses more bandwidth and storage</string>
    <string name="timetoword_justnow">just now</string>
    <string name="timetoword_aminuteago">a minute ago</string>
    <string name="timetoword_minutesago">%d minutes ago</string>
    <string name="timetoword_anhourago">an hour ago</string>
    <string name="timetoword_hoursago">%d hours ago</string>
    <string name="timetoword_yesterday">yesterday</string>
    <string name="timetoword_daysago">%d days ago</string>
    <string name="timetoword_minutesago_short">%d m</string>
    <string name="timetoword_hoursago_short">%d h</string>
    <string name="timetoword_daysago_short">%d d</string>
    <string name="camera_confirm_image_upload">
        <![CDATA[
        Do you want to upload your picture to <a href="http://criticalmaps.net">criticalmaps.net</a>? \nIt will be published under the <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> license.
        ]]>
    </string>
    <string name="camera_upload">Upload image!</string>
    <string name="camera_discard">Nope :-(</string>
    <string name="camera_uploading_progress">Uploading &#8230;</string>
    <string name="camera_upload_failed_title">Image upload failed</string>
    <string name="camera_upload_failed_message">Please try again</string>
    <string name="camera_processing_image">Processing image &#8230;</string>
    <string name="camera_no_location">You can\'t upload images without a GPS signal</string>
    <string name="camera_no_outputfile">Can\'t save file on device.</string>
    <string name="camera_image_upload_succeeded_title">Image upload worked!</string>
    <string name="camera_image_upload_succeeded_message">The picture is uploaded to gallery on criticalmaps.net </string>
    <string name="camera_no_camera">You can\'t take pictures if your device doesn\'t have a camera.</string>
    <string name="camera_permissions_permanently_denied_title">SD card access denied</string>
    <string name="camera_permissions_permanently_denied_text">You previously denied permission to access your SD card. This means images can\'t be saved to your device.\nDo you want to grant the permission now in the app settings?</string>
    <string name="introduction_heading">Please take some time to read this quick introduction.</string>
    <string name="introduction_own_icon">This is what you look like:\u0020</string>
    <string name="introduction_other_icon">This is what all the other Users look like:\u0020</string>
    <string name="introduction_close_app">Please close the app if you don\'t want to be tracked anymore.</string>
    <string name="introduction_careful">Please rather pay attention to traffic instead of the app.</string>
    <string name="introduction_bugs">If you find bugs in the app, please let us know by clicking the feedback-button in the settings-menu.</string>
    <string name="introduction_requisites">In order for this app to run properly, you need to have a working mobile data connection and GPS enabled.</string>
</resources>