<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single" android:id="@+id/navigation_group">
        <item
            android:id="@+id/navigation_map"
            android:checked="true"
            android:icon="@drawable/ic_maps_map"
            android:title="@string/section_map" />

        <item
            android:id="@+id/navigation_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/section_chat" />

        <item
            android:id="@+id/navigation_twitter"
            android:icon="@drawable/ic_twitter"
            android:title="@string/section_twitter" />

        <item
            android:id="@+id/navigation_rules"
            android:icon="@drawable/ic_maps_traffic"
            android:title="@string/section_rules" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/section_settings" />

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/section_about" />
    </group>

    <group>
        <item
            android:id="@+id/navigation_observer_mode"
            android:icon="@drawable/ic_visibility_24dp"
            android:title="@string/observer_mode"
            android:checkable="false"
            app:actionLayout="@layout/navigation_observer_mode_switch" />
    </group>
</menu>
