<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/introduction_paragraph"
            android:text="@string/introduction_heading" />

        <TextView
            style="@style/introduction_paragraph"
            android:drawableRight="@drawable/map_marker_own"
            android:drawableEnd="@drawable/map_marker_own"
            android:singleLine="true"
            android:text="@string/introduction_own_icon" />

        <TextView
            style="@style/introduction_paragraph"
            android:drawableRight="@drawable/map_marker"
            android:drawableEnd="@drawable/map_marker_own"
            android:singleLine="true"
            android:text="@string/introduction_other_icon" />

        <TextView
            style="@style/introduction_paragraph"
            android:text="@string/introduction_close_app" />

        <TextView
            style="@style/introduction_paragraph"
            android:text="@string/introduction_careful" />

        <TextView
            style="@style/introduction_paragraph"
            android:text="@string/introduction_bugs" />

        <TextView
            style="@style/introduction_paragraph"
            android:text="@string/introduction_requisites" />

    </LinearLayout>

</ScrollView>
