<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/take_picture"
        android:icon="@drawable/ic_toolbar_take_image"
        android:title="@string/take_picture"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/ic_toolbar_close"
        android:title="@string/close_button"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:icon="@drawable/ic_toolbar_overflow"
        android:orderInCategory="11111"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/settings_feedback"
                android:title="@string/feedback"
                app:showAsAction="never" />
            <item
                android:id="@+id/settings_datenschutz"
                android:title="@string/datenschutz"
                app:showAsAction="never" />
            <item
                android:id="@+id/rate_the_app"
                android:title="@string/rate_the_app"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
