<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/take_picture"
        android:icon="@drawable/ic_image_camera_alt"
        app:showAsAction="always"
        android:title="@string/take_picture" />
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/ic_content_clear"
        app:showAsAction="always"
        android:title="@string/close_button" />
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="11111"
        app:showAsAction="always"
        android:title="">
        <menu>
            <!--<item-->
                <!--android:id="@+id/settings_tracking_toggle"-->
                <!--android:checkable="true"-->
                <!--android:checked="true"-->
                <!--android:showAsAction="collapseActionView"-->
                <!--android:title="@string/tracking" />-->
            <item
                android:id="@+id/settings_feedback"
                app:showAsAction="never"
                android:title="@string/feedback" />
            <item
                android:id="@+id/settings_datenschutz"
                app:showAsAction="never"
                android:title="@string/datenschutz" />
            <item
            android:id="@+id/rate_the_app"
            app:showAsAction="never"
            android:title="@string/rate_the_app" />
        </menu>
    </item>
</menu>